welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (isSummer){
    if ((temp >= 60)&&(temp <= 100)){
      return true
    }
    return false
  } else if ((temp >= 60)&&(temps <= 90)){
    return true
  }
  return false
}